--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Random Tests",
             "type": "python",
             "request": "launch",
             "program": "random_tests.py",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Data Cleaner",
+            "type": "python",
+            "request": "launch",
+            "program": "data_cleaner.py",
             "console": "integratedTerminal"
         },
         {
